# VILLA_MANAGEMENT_SYSTEM

./: PROJECT_RETROSPECT.md  README.md
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 45c22db5a826_added_waste.py  7b37a0a75825_added_waste.py  ab25714a0525_initial_clean_schema.py
backend/app/: main.py
backend/app/core/: database.py
backend/app/models/: __init__.py  inventory.py  menu.py  orders.py  waste.py
backend/app/routers/: __init__.py  inventory.py  menu.py  orders.py  waste.py
backend/app/schemas/: inventory.py  menu.py  orders.py  waste.py
backend/app/seeds/: seed_inventory.py  seed_menu.py
backend/app/services/: inventory.py  menu.py  orders.py  waste.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: loading.tsx  not-found.tsx  page.tsx
frontend/app/componants/: bottomoptions.tsx  hero.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/inventory/: page.tsx
frontend/app/dashboard/menu/: page.tsx
frontend/app/dashboard/menu/create/: page.tsx
frontend/app/dashboard/orders/: page.tsx
frontend/app/dashboard/orders/history/: page.tsx
frontend/app/dashboard/orders/new/: page.tsx
frontend/app/dashboard/tasks/: page.tsx
frontend/app/dashboard/waste/: page.tsx
frontend/app/lib/: api.js
frontend/app/sign-in/[[...sign-in]]/: page.tsx
